# xemacs_hacks

./: README.md
lah/: README.mdown  identica-mode-url.el  identica-mode-w3.el  identica-mode.el  longlines.el  markdown-mode.el  nero.el  paredit.el  term.el
lah/cliaspora.el/: byte-compile-project.sh  cliaspora-aspects.el  cliaspora-bbdb.el  cliaspora-comments.el  cliaspora-contacts.el  cliaspora-main.el  cliaspora-messages.el  cliaspora-misc.el  cliaspora-mode.el  cliaspora-new.el  cliaspora-notifications.el  cliaspora-post.el  cliaspora-stream-mode.el  cliaspora-stream-post.el  cliaspora-stream.el  cliaspora-urls.el  cliaspora.el  markdown-translator.el
lah/delicious/: delicioapi.el
lah/emacs-jabber/: Makefile  config.status  fsm.el  jabber-autoloads.el  jabber-bookmarks.el  jabber-conn.el  jabber-export.el  jabber-history.el  jabber-libnotify.el  jabber-menu.el  jabber-muc.el  jabber-newdisco.el  jabber-util.el  jabber.el
lah/emacs-jabber/gconf/: Makefile
lah/emacs-jabber/tests/: Makefile
lah/ljupdate/: Makefile  lj-acct.el  lj-compose.el  lj-edit.el  lj-fill.el  lj-login.el  lj-protocol.el  ljupdate.el
lah/org/lisp/: org-compat.el  org-list.el  org-macs.el  org-table.el  org.el
lah/sxemacs/: json.el
lah/sxemacs/diaspora.el/: TODO.org  diaspora-bbdb.el  diaspora-comments.el  diaspora-contacts.el  diaspora-mode.el  diaspora-new.el  diaspora-notifications.el  diaspora-post-edit-mode.el  diaspora-post.el  diaspora-stream-mode.el  diaspora-stream.el  diaspora.el  htmlr.el  markdown-translator.el
lah/sxemacs/url/: ChangeLog  Makefile  Makefile.in  config.status  configure
lah/sxemacs/url/autom4te.cache/: output.0  traces.0
lah/sxemacs/url/lisp/: Makefile  Makefile.in  (+34 more)
lah/w3m/: Makefile  config.status  mew-w3m.el
lah/w3m/doc/: Makefile
lah/w3m/shimbun/: sb-pocketgames.el
lah/xemacs/diaspora.el/: README.mdown  byte-compile.el  diaspora-aspects.el  diaspora-contacts.el  diaspora-main.el  diaspora-messages.el  diaspora-misc.el  diaspora-new.el  diaspora-post.el  diaspora-stream.el  diaspora-urls.el  diaspora.el  markdown-translator.el
lah/xemacs/url/: TODO  aclocal.m4  configure  configure.in
lah/xemacs/url/lisp/: auto-autoloads.el  custom-load.el  url-auto.el  url-cookie.el  url-file.el  url-gw.el  url-http.el  url-https.el  url.el  vc-dav.el
lah/yasnippet/: XEMACS.mdown  dropdown-list.el  yasnippet.el
slh/: .gitignore  README  dired-tar.el  ffi-mpd.el  ges-post.el  google-query.el  hddtemp.el  linux-kernel.el  lj.el  mozmail.el  mpd.el  pkg-build.el  pui-update.el  snap.el  sxell.el
(+28 files in other folders)
